mobile flicker fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -461,12 +461,6 @@
     height: 60px;
     padding: 18px 0;
   }
-  
-  .scrolling-content span {
-    font-size: 20px;
-    line-height: 24px;
-    margin-right: 40px;
-  }
 
   /* Footer Mobile Styling */
   .main-footer {
